Added --add-exports flag to expose test classes to JUnit